--- a/RecipeApp/package.json
+++ b/RecipeApp/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "mongoose": "^4.13.4",
     "morgan": "~1.7.0",
     "nodemon": "^1.12.1",
     "serve-favicon": "~2.3.2"
