--- a/RecipeApp/package.json
+++ b/RecipeApp/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.1",
     "mongoose": "^4.13.4",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "serve-favicon": "~2.3.2"
   }
